--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
         <div class="site-title">
             <a href="/"><h1>Blog Yagr</h1></a>
             <p>A Yagr Site</p>
+            <p>Super Yagr Blog</p>
         </div>
         <ul>
             <li><a href="/">Blogs</a></li>
