--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Yagr</title>
+    <title>Blog Yagr | <%= title> </title>
 </head>
 <body>
 
     <nav>
         <div class="site-title">
-            <a href="/"><h1>Blog Yagr</h1></a>
+            <a href="/"><h1>Blog Yagr | <%= title %></h1></a>
             <p>A Yagr Site</p>
             <p>Super Yagr Blog</p>
         </div>
