--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Yagr | <%= title%></title>
+    <%- include('./partials/head.ejs')%>
 
-</head>
 <body>
-    <nav>
-        <div class="site-title">
-            <a href="/"><h1>Blog Yagr</h1></a>
-            <p>A Yagr Site</p>
-            <p>Super Yagr Blog</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+    <%- include('./partials/nav.ejs')%>
 
     <div class="blogs content">
         <h2>All Blogs</h2>
@@ -35,6 +20,7 @@
         <%} %>
 
     </div>
-    
+    <%- include('./partials/footer.ejs')%>
+
 </body>
 </html>
