--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,87 +2,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Yagr | <%= title%></title>
+    <link rel="stylesheet" href="/styles.css">
     <style>
         
-        body{
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 0 20px;
-            font-family: 'Times New Roman', Times, serif;
-        }
-        p,h1,h2,h3,a,ul {
-            margin: 0;
-            padding: 0;
-            text-decoration: none;
-            color: #222;
-        }
         
-        nav {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 60px;
-            padding-bottom: 1px solid #ddd;
-            text-transform: uppercase;
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: space-around;
-            align-self: 20px;
-        }
-        nav li {
-            list-style: none;
-            margin-left: 20px;
-        }
-        nav h1 {
-            font-size: 3em;
-        }
-        nav p, nav a{
-            color: #777;
-            font-weight: 300;
-        }
-        footer {
-            color: #777;
-            text-align: center;
-            margin: 80px auto 20px;
-        }
-        h2 {
-            margin-bottom: 40px;
-        }
-        h3 {
-            text-decoration: capitalize;
-            margin-bottom: 8px;
-        }
-        .content {
-            margin-left: 20px;
-        }
-        .create-blog form{
-            max-width: 400px;
-            margin: 0 auto;
-        }
-        .create-blog input,
-        .create-blog textarea{
-            display: block;
-            width: 100%;
-            margin: 10px 0;
-            padding: 8px;
-        }
-        .create-blog label {
-            display: block;
-            margin-top: 24px;
-        }
-        textarea {
-            height: 120px;
-        }
-        .create-blog button {
-            margin-top:20px;
-            background: crimson;
-            color: white;
-            border: 0;
-            padding: 6px;
-            font-size: 1.2em;
-            cursor: pointer;
-        }
 
     </style>
 
